// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`address/geocoding/azure-maps Geocode when all inputs are correct should geocode address to geographical coordinates 1`] = `
Ok {
  "value": Object {
    "latitude": 50.08781,
    "longitude": 14.42046,
  },
}
`;

exports[`address/geocoding/azure-maps Geocode when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Bad request\\",
  \\"detail\\": \\"query is missing or empty\\"
}
AST Path: definitions[0].statements[1].responseHandlers[1].statements[0]
Original Map Location: Line 31, column 7",
}
`;

exports[`address/geocoding/azure-maps ReverseGeocode when all inputs are correct should reverse geocode geographical coordinates 1`] = `
Ok {
  "value": Array [
    Object {
      "addressCountry": "USA",
      "addressLocality": "Brooklyn, New York",
      "addressRegion": "Kings, NY",
      "formattedAddress": "279 Bedford Avenue, Brooklyn, NY 11211, United States",
      "postalCode": "11211",
      "streetAddress": "279 Bedford Avenue",
    },
  ],
}
`;

exports[`address/geocoding/azure-maps ReverseGeocode when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Bad request\\",
  \\"detail\\": \\"The provided coordinates in query are invalid, out of range, or not in the expected format\\"
}
AST Path: definitions[1].statements[1].responseHandlers[1].statements[0]
Original Map Location: Line 130, column 7",
}
`;
